# gnews-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docker/: Dockerfile  docker-compose.yml
gnews_agent/: __init__.py  cli.py  config.py  exceptions.py  memory.py  query.py
gnews_agent/ai/: __init__.py  client.py  sentiment.py  summarizer.py
gnews_agent/ai/prompts/: __init__.py  brief_v1.txt  sentiment_v1.txt
gnews_agent/ingestion/: __init__.py  deduplicator.py  embedder.py  enricher.py  fetcher.py
gnews_agent/storage/: __init__.py  schema.sql  sqlite_store.py  vector_store.py
gnews_agent/storage/backends/: __init__.py  chroma.py
mcp_server/: __init__.py  security.py  server.py
mcp_server/tools/: __init__.py
skills/gnews/: SKILL.md
skills/gnews/scripts/: gnews_agent.py
tests/: conftest.py  test_cli.py  test_deduplicator.py  test_fetcher.py  test_llm_client_retry.py  test_mcp_tools.py  test_memory_ai.py  test_memory_ingest.py  test_memory_query.py  test_security.py  test_skill_launcher.py  test_smoke.py  test_sqlite_store.py  test_where_clause.py
tests/integration/: conftest.py  test_real_brief.py  test_real_chroma.py  test_real_cli.py  test_real_embedder.py  test_real_end_to_end.py  test_real_gnews.py  test_real_mcp.py
